# eloquent-ext-consolewriter

./: CMakeLists.txt  ConsoleWriter.cpp  ConsoleWriter.h  ConsoleWriterAttach.cpp  ConsoleWriterAttach.h  ConsoleWriterFactory.cpp  ConsoleWriterFactory.h  LICENSE
ConsoleWriter.xcodeproj/: project.pbxproj
ConsoleWriter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ConsoleWriter.xcodeproj/project.xcworkspace/xcshareddata/: ConsoleWriter.xccheckout
ConsoleWriter.xcodeproj/project.xcworkspace/xcuserdata/nathanwehr.xcuserdatad/: UserInterfaceState.xcuserstate
ConsoleWriter.xcodeproj/xcuserdata/nathanwehr.xcuserdatad/xcschemes/: ConsoleWriter.xcscheme  xcschememanagement.plist
